tests/pre_push/snapshots/pre_push__publication__full_stack_initial_state.snap
---
source: tests/pre_push/publication.rs
expression: ctx.formatted_github_state()
---
[
  {
    "number": 1,
    "node_id": "PR_1",
    "state": "OPEN",
    "is_draft": true,
    "title": "Commit A",
    "body": "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->\n\n\n\n---\n\n- 　  #2\n- 👉 #1\n\n<details>\n<summary><strong>⬇️ Download this PR</strong></summary>\n\n######\n\n**Branch**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_1] && git checkout -b pr-[GHERRIT_ID_1] FETCH_HEAD\n```\n\n**Checkout**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_1] && git checkout FETCH_HEAD\n```\n\n**Cherry Pick**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_1] && git cherry-pick FETCH_HEAD\n```\n\n**Pull**\n```bash\ngit pull origin refs/heads/[GHERRIT_ID_1]\n```\n\n</details>\n\n*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*",
    "head": "[GHERRIT_ID_1]",
    "base": "main"
  },
  {
    "number": 2,
    "node_id": "PR_2",
    "state": "OPEN",
    "is_draft": true,
    "title": "Commit B",
    "body": "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->\n\n\n\n---\n\n- 👉 #2\n- 　  #1\n\n<details>\n<summary><strong>⬇️ Download this PR</strong></summary>\n\n######\n\n**Branch**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_2] && git checkout -b pr-[GHERRIT_ID_2] FETCH_HEAD\n```\n\n**Checkout**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_2] && git checkout FETCH_HEAD\n```\n\n**Cherry Pick**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_2] && git cherry-pick FETCH_HEAD\n```\n\n**Pull**\n```bash\ngit pull origin refs/heads/[GHERRIT_ID_2]\n```\n\n</details>\n\n*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*",
    "head": "[GHERRIT_ID_2]",
    "base": "gherrit-bases/[GHERRIT_ID_2]"
  }
]
