tests/pre_push/snapshots/pre_push__publication__graphql_batch_backoff.snap
---
source: tests/pre_push/publication.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch batch-backoff is MANAGED. Syncing stack...
[gherrit] [WARN] Using custom GitHub API URL: [MOCK_SERVER_URL]
[gherrit] [WARN] Hit GitHub resource limit with query batch of size 4
[gherrit] [WARN] Backing off GraphQL batch size from 4 to 2.
[gherrit] Pushing chunk to remote...
[gherrit] Queued update for PR #1: https://github.com/owner/repo/pull/1
[gherrit] Queued update for PR #2: https://github.com/owner/repo/pull/2
[gherrit] Queued update for PR #3: https://github.com/owner/repo/pull/3
[gherrit] Queued update for PR #4: https://github.com/owner/repo/pull/4
[gherrit] Updating batch of 4 PRs...
[gherrit] [WARN] Hit GitHub resource limit with mutation batch of size 4
[gherrit] [WARN] Backing off GraphQL batch size from 4 to 2.
[gherrit] [WARN] GitHub may have applied part of the PR update batch; reobserving before continuing.
[gherrit] [WARN] Hit GitHub resource limit with query batch of size 4
[gherrit] [WARN] Backing off GraphQL batch size from 4 to 2.
[gherrit] Queued update for PR #1: https://github.com/owner/repo/pull/1
[gherrit] Queued update for PR #2: https://github.com/owner/repo/pull/2
[gherrit] Queued update for PR #3: https://github.com/owner/repo/pull/3
[gherrit] Queued update for PR #4: https://github.com/owner/repo/pull/4
[gherrit] Updating batch of 4 PRs...
[gherrit] Batch update complete.
[gherrit] Successfully synced 4 commits.
