tests/pre_push/snapshots/pre_push__publication__graphql_batch_backoff_trace.snap
---
source: tests/pre_push/publication.rs
expression: requests
---
[
    [
        PullRequestQuery {
            connections: [
                PullRequestConnectionQuery {
                    head: "Gaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaab",
                    after: None,
                },
                PullRequestConnectionQuery {
                    head: "Gaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaac",
                    after: None,
                },
                PullRequestConnectionQuery {
                    head: "Gaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaad",
                    after: None,
                },
                PullRequestConnectionQuery {
                    head: "Gaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaae",
                    after: None,
                },
            ],
            include_repository_facts: true,
        },
    ],
    [
        PullRequestQuery {
            connections: [
                PullRequestConnectionQuery {
                    head: "Gaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaab",
                    after: None,
                },
                PullRequestConnectionQuery {
                    head: "Gaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaac",
                    after: None,
                },
            ],
            include_repository_facts: true,
        },
    ],
    [
        PullRequestQuery {
            connections: [
                PullRequestConnectionQuery {
                    head: "Gaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaad",
                    after: None,
                },
                PullRequestConnectionQuery {
                    head: "Gaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaae",
                    after: None,
                },
            ],
            include_repository_facts: false,
        },
    ],
    [
        CreatePr,
        CreatePr,
        CreatePr,
        CreatePr,
    ],
    [
        UpdatePr,
        UpdatePr,
        UpdatePr,
        UpdatePr,
    ],
]
