tests/pre_push/snapshots/pre_push__publication__mixed_established_and_new_stack_trace.snap
---
source: tests/pre_push/publication.rs
expression: ctx.sanitize(&trace)
---
ESTABLISHED ID (MUST BE ABSENT FROM PUSHES): [GHERRIT_ID_1]
NEW ID: [GHERRIT_ID_2]

SECOND-ATTEMPT EXTERNAL EVENTS:
[
    GraphQl(
        Repository {
            owner: "owner",
            repository: "repo",
            selected_fields: [
                "defaultBranchRef.name",
                "defaultBranchRef.target.oid",
                "id",
            ],
            connections: [
                PullRequestConnectionExchange {
                    alias: None,
                    head: None,
                    first: 100,
                    after: None,
                    states: [
                        "OPEN",
                    ],
                    selected_fields: [
                        "nodes.autoMergeRequest.enabledAt",
                        "nodes.baseRefName",
                        "nodes.baseRefOid",
                        "nodes.body",
                        "nodes.headRefName",
                        "nodes.headRefOid",
                        "nodes.id",
                        "nodes.isCrossRepository",
                        "nodes.isInMergeQueue",
                        "nodes.number",
                        "nodes.state",
                        "nodes.title",
                        "pageInfo.endCursor",
                        "pageInfo.hasNextPage",
                    ],
                },
            ],
        },
    ),
    GraphQl(
        Repository {
            owner: "owner",
            repository: "repo",
            selected_fields: [],
            connections: [
                PullRequestConnectionExchange {
                    alias: Some(
                        "op0",
                    ),
                    head: Some(
                        "[GHERRIT_ID_2]",
                    ),
                    first: 100,
                    after: None,
                    states: [
                        "CLOSED",
                        "MERGED",
                    ],
                    selected_fields: [
                        "nodes.headRefName",
                        "nodes.id",
                        "nodes.isCrossRepository",
                        "nodes.number",
                        "nodes.state",
                        "pageInfo.endCursor",
                        "pageInfo.hasNextPage",
                    ],
                },
            ],
        },
    ),
    GitPush(
        PushRecord {
            arguments: [
                "git",
                "--no-replace-objects",
                "--config-env=remote.gherrit-publication.url=GHERRIT_PRIVATE_PUSH_DESTINATION",
                "--config-env=remote.gherrit-publication.pushurl=GHERRIT_PRIVATE_PUSH_DESTINATION",
                "-c",
                "http.followRedirects=false",
                "-c",
                "push.pushOption=",
                "push",
                "--porcelain",
                "--atomic",
                "--no-verify",
                "--no-follow-tags",
                "--recurse-submodules=no",
                "--no-signed",
                "--no-force-if-includes",
                "--force-with-lease=refs/heads/[GHERRIT_ID_2]:",
                "--force-with-lease=refs/heads/gherrit-bases/[GHERRIT_ID_2]:",
                "--force-with-lease=refs/tags/gherrit/[GHERRIT_ID_2]/v1:",
                "--",
                "gherrit-publication",
                "[SHA_1]:refs/heads/[GHERRIT_ID_2]",
                "[SHA_2]:refs/heads/gherrit-bases/[GHERRIT_ID_2]",
                "[SHA_1]:refs/tags/gherrit/[GHERRIT_ID_2]/v1",
            ],
            exit_code: 0,
        },
    ),
    GraphQl(
        Mutation {
            operations: [
                MutationExchange {
                    operation: CreatePr,
                    alias: Some(
                        "op0",
                    ),
                    input: {
                        "baseRefName": "gherrit-bases/[GHERRIT_ID_2]",
                        "body": "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->\n\n\n\n\n---\n\n\n<details>\n<summary><strong>⬇\u{fe0f} Download this PR</strong></summary>\n\n######\n\n**Branch**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_2] && git checkout -b pr-[GHERRIT_ID_2] FETCH_HEAD\n```\n\n**Checkout**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_2] && git checkout FETCH_HEAD\n```\n\n**Cherry Pick**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_2] && git cherry-pick FETCH_HEAD\n```\n\n**Pull**\n```bash\ngit pull origin refs/heads/[GHERRIT_ID_2]\n```\n\n</details>\n\n*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*\n\n<!-- WARNING: GHerrit relies on the following metadata to work properly. DO NOT EDIT OR REMOVE. -->\n<!-- gherrit-meta: {\"id\":\"[GHERRIT_ID_2]\",\"parent\":\"[GHERRIT_ID_1]\",\"child\":null} -->",
                        "clientMutationId": "gherrit:create:[GHERRIT_ID_2]",
                        "headRefName": "[GHERRIT_ID_2]",
                        "repositoryId": "REPO_NODE_ID",
                        "title": "New child",
                    },
                    selected_fields: [
                        "clientMutationId",
                        "pullRequest.headRefName",
                        "pullRequest.id",
                        "pullRequest.number",
                    ],
                },
            ],
        },
    ),
    GitPush(
        PushRecord {
            arguments: [
                "git",
                "--no-replace-objects",
                "--config-env=remote.gherrit-publication.url=GHERRIT_PRIVATE_PUSH_DESTINATION",
                "--config-env=remote.gherrit-publication.pushurl=GHERRIT_PRIVATE_PUSH_DESTINATION",
                "-c",
                "http.followRedirects=false",
                "-c",
                "push.pushOption=",
                "push",
                "--porcelain",
                "--atomic",
                "--no-verify",
                "--no-follow-tags",
                "--recurse-submodules=no",
                "--no-signed",
                "--no-force-if-includes",
                "--force-with-lease=refs/tags/gherrit/[GHERRIT_ID_2]/pr:",
                "--",
                "gherrit-publication",
                "[SHA_1]:refs/tags/gherrit/[GHERRIT_ID_2]/pr",
            ],
            exit_code: 0,
        },
    ),
    GraphQl(
        Mutation {
            operations: [
                MutationExchange {
                    operation: UpdatePr,
                    alias: Some(
                        "op0",
                    ),
                    input: {
                        "body": "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->\n\n\n\n\n---\n\n- \u{3000}\u{2009} #2\n- 👉 #1\n\n<details>\n<summary><strong>⬇\u{fe0f} Download this PR</strong></summary>\n\n######\n\n**Branch**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_1] && git checkout -b pr-[GHERRIT_ID_1] FETCH_HEAD\n```\n\n**Checkout**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_1] && git checkout FETCH_HEAD\n```\n\n**Cherry Pick**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_1] && git cherry-pick FETCH_HEAD\n```\n\n**Pull**\n```bash\ngit pull origin refs/heads/[GHERRIT_ID_1]\n```\n\n</details>\n\n*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*\n\n<!-- WARNING: GHerrit relies on the following metadata to work properly. DO NOT EDIT OR REMOVE. -->\n<!-- gherrit-meta: {\"id\":\"[GHERRIT_ID_1]\",\"parent\":null,\"child\":\"[GHERRIT_ID_2]\"} -->",
                        "clientMutationId": "gherrit:update:PR_1",
                        "pullRequestId": "PR_1",
                    },
                    selected_fields: [
                        "clientMutationId",
                        "pullRequest.id",
                        "pullRequest.number",
                    ],
                },
                MutationExchange {
                    operation: UpdatePr,
                    alias: Some(
                        "op1",
                    ),
                    input: {
                        "body": "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->\n\n\n\n\n---\n\n- 👉 #2\n- \u{3000}\u{2009} #1\n\n<details>\n<summary><strong>⬇\u{fe0f} Download this PR</strong></summary>\n\n######\n\n**Branch**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_2] && git checkout -b pr-[GHERRIT_ID_2] FETCH_HEAD\n```\n\n**Checkout**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_2] && git checkout FETCH_HEAD\n```\n\n**Cherry Pick**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_2] && git cherry-pick FETCH_HEAD\n```\n\n**Pull**\n```bash\ngit pull origin refs/heads/[GHERRIT_ID_2]\n```\n\n</details>\n\n*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*\n\n<!-- WARNING: GHerrit relies on the following metadata to work properly. DO NOT EDIT OR REMOVE. -->\n<!-- gherrit-meta: {\"id\":\"[GHERRIT_ID_2]\",\"parent\":\"[GHERRIT_ID_1]\",\"child\":null} -->",
                        "clientMutationId": "gherrit:update:PR_2",
                        "pullRequestId": "PR_2",
                    },
                    selected_fields: [
                        "clientMutationId",
                        "pullRequest.id",
                        "pullRequest.number",
                    ],
                },
            ],
        },
    ),
]
