tests/pre_push/snapshots/pre_push__publication__next_version_lease_v1.snap
---
source: tests/pre_push/publication.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature-conflict is MANAGED. Publishing stack...
[gherrit] [WARN] Using custom GitHub API URL: [MOCK_SERVER_URL]
[gherrit] Successfully published 1 commit.
