tests/pre_push/snapshots/pre_push__publication__optimistic_locking_v2_fail.snap
---
source: tests/pre_push/publication.rs
assertion_line: 423
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature-conflict is MANAGED. Syncing stack...
[gherrit] [WARN] Using custom GitHub API URL: [MOCK_SERVER_URL]
[gherrit] Pushing chunk to remote...
[gherrit] [ERROR] `git push` failed for GHerrit remote 'origin'. Its outcome is indeterminate; retry the push to reobserve remote state.
